--- a/index.html
+++ b/index.html
@@ -13,28 +13,66 @@
             <p id="L_JP" style="display: inline;">日本語</p> &nbsp;/&nbsp;
             <p id="L_EN" style="display: inline;">English</p>
         </div>
+        <!-- 中文 -->
         <div id="CH" class="Link">
-            <img id="Avatar" src="Assests/Image/Avatar_230214.png">
+            <img class="Avatar" src="Assests/Image/Avatar_230214.png">
             <h2>負面具</h2>
-            <div id="Shop">
+            <div class="Shop">
                 <h3  style="padding-left: 30px; padding-top: 20px; padding-bottom: 10px; margin: 0; text-align: left;">商店</h3>
-                <div id="Shop_Buts">
-                    <div id="Shop1"><div id="Shopee"  class="Shop_But" onclick="window.open('https://shopee.tw/maskalter','_blank')">                              <img id="Shop_Img1" src="Assests/Image/LOGO/蝦皮.png">  </div><p>蝦皮</p></div>
-                    <div id="Shop2"><div id="S_Eleven"class="Shop_But" onclick="window.open('https://myship.7-11.com.tw/general/detail/GM2303135997318','_blank')"><img id="Shop_Img2" src="Assests/Image/LOGO/賣貨便.png"></div><p>賣貨便</p></div>
-                    <div id="Shop3"><div id="Hi_Life" class="Shop_But" onclick="alert('商店準備中！');">                                                            <img id="Shop_Img3" src="Assests/Image/LOGO/萊賣貨.png"></div><p>萊賣貨</p></div>
+                <div class="Shop_Buts">
+                    <div class="Shop1"><div class="Shopee   Shop_But" onclick="window.open('https://shopee.tw/maskalter','_blank')">                              <img class="Shop_Img1" src="Assests/Image/LOGO/蝦皮_C.png">  </div><p>蝦皮</p></div>
+                    <div class="Shop2"><div class="S_Eleven Shop_But" onclick="window.open('https://myship.7-11.com.tw/general/detail/GM2303135997318','_blank')"><img class="Shop_Img2" src="Assests/Image/LOGO/賣貨便_C.png"></div><p>賣貨便</p></div>
+                    <div class="Shop3"><div class="Hi_Life  Shop_But" onclick="alert('商店準備中！');">                                                            <img class="Shop_Img3" src="Assests/Image/LOGO/萊賣貨_C.png"></div><p>萊賣貨</p></div>
                 </div>
             </div>
-            <h3 style="padding-top: 1em; padding-left: 10%; text-align: left;">社群</h3>
-            <div id="IG"     class="LinkBox" onclick="window.open('https://www.instagram.com/mask_alter'                       ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/蝦皮.png"><div class="LinkText"><h3>Instagram</h3></div></div>
-            <div id="Pixiv"  class="LinkBox" onclick="window.open('https://www.pixiv.net/users/17778492'                       ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/蝦皮.png"><div class="LinkText"><h3>Pixiv</h3></div></div>
-            <div id="FB"     class="LinkBox" onclick="window.open('https://www.facebook.com/alter.mask.376'                    ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/蝦皮.png"><div class="LinkText"><h3>facebook</h3></div></div>
-            <div id="Twitter"class="LinkBox" onclick="window.open('https://twitter.com/maskalter333'                           ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/蝦皮.png"><div class="LinkText"><h3>Twitter</h3></div></div>
-            <div id="Plurk"  class="LinkBox" onclick="window.open('https://www.plurk.com/maskalter'                            ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/蝦皮.png"><div class="LinkText"><h3>噗浪</h3></div></div>
-            <div id="Bahamut"class="LinkBox" onclick="window.open('https://home.gamer.com.tw/profile/index.php?owner=maskalter','_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/蝦皮.png"><div class="LinkText"><h3>巴哈姆特</h3></div></div>
+            <h3  class="LinkTitle">社群</h3>
+            <div class="IG      LinkBox" onclick="window.open('https://www.instagram.com/mask_alter'                       ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO//IG_C.png">    <div class="LinkText"><h3>Instagram</h3></div></div>
+            <div class="Pixiv   LinkBox" onclick="window.open('https://www.pixiv.net/users/17778492'                       ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/Pixiv_C.png">  <div class="LinkText"><h3>Pixiv</h3></div></div>
+            <div class="FB      LinkBox" onclick="window.open('https://www.facebook.com/alter.mask.376'                    ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/FB_C.png">     <div class="LinkText"><h3>facebook</h3></div></div>
+            <div class="Twitter LinkBox" onclick="window.open('https://twitter.com/maskalter333'                           ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/Twitter_C.png"><div class="LinkText"><h3>Twitter</h3></div></div>
+            <div class="Plurk   LinkBox" onclick="window.open('https://www.plurk.com/maskalter'                            ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/噗浪_C.png">   <div class="LinkText"><h3>噗浪</h3></div></div>
+            <div class="Bahamut LinkBox" onclick="window.open('https://home.gamer.com.tw/profile/index.php?owner=maskalter','_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/巴哈姆特_C.png"><div class="LinkText"><h3>巴哈姆特</h3></div></div>
         </div>
+        <!-- 日本語 -->
+        <div id="JP" class="Link">
+            <img class="Avatar" src="Assests/Image/Avatar_230214.png">
+            <h2>負面具</h2>
+            <div class="Shop">
+                <h3  style="padding-left: 30px; padding-top: 20px; padding-bottom: 10px; margin: 0; text-align: left;">ネットショップ</h3>
+                <div class="Shop_Buts">
+                    <div class="Shop1"><div class="BOOTH  Shop_But" onclick="window.open('https://maskalter333.booth.pm/','_blank')"> <img class="Shop_Img1" src="Assests/Image/LOGO/BOOTH_C.png"  style="width: 50%; height: 50%; padding-top: 25%;"> </div><p>BOOTH</p></div>
+                    <div class="Shop2"><div class="FANBOX Shop_But" onclick="window.open('https://maskalter333.fanbox.cc/','_blank')"><img class="Shop_Img2" src="Assests/Image/LOGO/FANBOX_C.png" style="width: 60%; height: 60%; padding-top: 17%;"></div><p>FANBOX</p></div>
+                </div>
+            </div>
+            <h3  class="LinkTitle">SNS</h3>
+            <div class="Twitter LinkBox" onclick="window.open('https://twitter.com/maskalter333'                           ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/Twitter_C.png"><div class="LinkText"><h3>Twitter</h3></div></div>
+            <div class="Pixiv   LinkBox" onclick="window.open('https://www.pixiv.net/users/17778492'                       ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/Pixiv_C.png">  <div class="LinkText"><h3>Pixiv</h3></div></div>
+            <div class="IG      LinkBox" onclick="window.open('https://www.instagram.com/mask_alter'                       ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO//IG_C.png">    <div class="LinkText"><h3>Instagram</h3></div></div>
+            <div class="FB      LinkBox" onclick="window.open('https://www.facebook.com/alter.mask.376'                    ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/FB_C.png">     <div class="LinkText"><h3>facebook</h3></div></div>           
+            <div class="Plurk   LinkBox" onclick="window.open('https://www.plurk.com/maskalter'                            ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/噗浪_C.png">   <div class="LinkText"><h3>Plurk</h3></div></div>
+        </div>
+        <!-- English -->
+        <div id="EN" class="Link">
+            <img class="Avatar" src="Assests/Image/Avatar_230214.png">
+            <h2>MASK ALTER</h2>
+            <div class="Shop">
+                <h3  style="padding-left: 30px; padding-top: 20px; padding-bottom: 10px; margin: 0; text-align: left;">SHOP</h3>
+                <div class="Shop_Buts">
+                    <div class="Shop1"><div class="BOOTH  Shop_But" onclick="window.open('https://maskalter333.booth.pm/','_blank')"> <img class="Shop_Img1" src="Assests/Image/LOGO/BOOTH_C.png"  style="width: 50%; height: 50%; padding-top: 25%;"> </div><p>BOOTH</p></div>
+                    <div class="Shop2"><div class="FANBOX Shop_But" onclick="window.open('https://maskalter333.fanbox.cc/','_blank')"><img class="Shop_Img2" src="Assests/Image/LOGO/FANBOX_C.png" style="width: 60%; height: 60%; padding-top: 17%;"></div><p>FANBOX</p></div>
+                </div>
+            </div>
+            <h3  class="LinkTitle">Social Media</h3>
+            <div class="Twitter LinkBox" onclick="window.open('https://twitter.com/maskalter333'                           ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/Twitter_C.png"><div class="LinkText"><h3>Twitter</h3></div></div>
+            <div class="Pixiv   LinkBox" onclick="window.open('https://www.pixiv.net/users/17778492'                       ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/Pixiv_C.png">  <div class="LinkText"><h3>Pixiv</h3></div></div>
+            <div class="IG      LinkBox" onclick="window.open('https://www.instagram.com/mask_alter'                       ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO//IG_C.png">    <div class="LinkText"><h3>Instagram</h3></div></div>
+            <div class="FB      LinkBox" onclick="window.open('https://www.facebook.com/alter.mask.376'                    ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/FB_C.png">     <div class="LinkText"><h3>facebook</h3></div></div>           
+            <div class="Plurk   LinkBox" onclick="window.open('https://www.plurk.com/maskalter'                            ,'_blank')"><img class="LinkIcon" src="Assests/Image/LOGO/噗浪_C.png">   <div class="LinkText"><h3>Plurk</h3></div></div>
+        </div>
+        <div id="Foot" style="height: 10em;"><img id="FootImg" src="Assests/Image/Foot.png"></div>
     </div>
     <div id="Nav">
-
+        <h5 class="Page" style="margin-top: 10vh;"></h5>
     </div>
 </body>
 </html>
