--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="Shop_Buts">
                     <div class="Shop1"><div class="Shopee   Shop_But" onclick="window.open('https://shopee.tw/maskalter','_blank')">                              <img class="Shop_Img1" src="Assests/Image/LOGO/蝦皮_C.png">  </div><p>蝦皮</p></div>
                     <div class="Shop2"><div class="S_Eleven Shop_But" onclick="window.open('https://myship.7-11.com.tw/general/detail/GM2303135997318','_blank')"><img class="Shop_Img2" src="Assests/Image/LOGO/賣貨便_C.png"></div><p>賣貨便</p></div>
-                    <div class="Shop3"><div class="Hi_Life  Shop_But" onclick="alert('商店準備中！');">                                                            <img class="Shop_Img3" src="Assests/Image/LOGO/萊賣貨_C.png"></div><p>萊賣貨</p></div>
+                    <div class="Shop3"><div class="Hi_Life  Shop_But" onclick="window.open('https://17url.cc/Zvwdo','_blank')">                                   <img class="Shop_Img3" src="Assests/Image/LOGO/萊賣貨_C.png"></div><p>萊賣貨</p></div>
                 </div>
             </div>
             <h3  class="LinkTitle">社群</h3>
